--- a/discord/index.html
+++ b/discord/index.html
@@ -7,6 +7,6 @@
   <title>Discord?</title>
 </head>
 <body>
-  
+  <meta http-equiv="refresh" content="5; URL=https://www.bitdegree.org/" />
 </body>
 </html>
