--- a/discord/index.html
+++ b/discord/index.html
@@ -7,6 +7,6 @@
   <title>Discord?</title>
 </head>
 <body>
-  <meta http-equiv="refresh" URL=https://discord.gg/lcy/" />
+  <meta http-equiv="refresh" content="0; URL=https://discord.gg/lcy/" />
 </body>
 </html>
