--- a/discord/index.html
+++ b/discord/index.html
@@ -7,6 +7,6 @@
   <title>Discord?</title>
 </head>
 <body>
-  <script src="redirect/.js"></script>
+  <script src="/redirect.js"></script>
 </body>
 </html>
