--- a/discord/index.html
+++ b/discord/index.html
@@ -5,8 +5,10 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Discord?</title>
-</head>
-<body>
-  <script src="/redirect.js"></script>
-</body>
+  <head>
+    <meta http-equiv="refresh" content="0; url='https://discord.gg/lcy'" />
+  </head>
+  <body>
+    <p>Please follow <a href="https://discord.gg/lcy">this link</a>.</p>
+  </body>
 </html>
