--- a/index.html
+++ b/index.html
@@ -8,13 +8,11 @@
         <meta name="author" content="αngi#8888" />
         <meta name="description" content="Angi Personal Site" />
         <meta property="og:site_name" content="Angi | Home" />
-        <meta property="og:title" content="Angi | Home" />
+        <meta property="og:title" content="αngi#8888" />
         <meta property="og:type" content="website" />
         <meta property="og:description" content="Angi Personal Site" />
         <meta property="og:image" content="https://cdn.discordapp.com/avatars/952987111135514704/a_9989a27b388baea7fc95975d4290f9af.gif?size=4096" />
         <meta property="og:image:type" content="image/jpeg" />
-        <meta property="og:image:width" content="1280" />
-        <meta property="og:image:height" content="800" />
         <meta content="#800080" name="theme-color" />
         <meta content="#800080" name="msapplication-navbutton-color" />
         <meta property="og:url" content="https://soyangi.me" />
