--- a/index.html
+++ b/index.html
@@ -5,18 +5,16 @@
         <script src="assets/scripts/sparkle.js"></script>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width,initial-scale=1" />
-        <meta name="author" content="αngi#8888" />
+        <meta name="author" content="Angi | Home" />
         <meta name="description" content="Angi Personal Site" />
-        <meta property="og:site_name" content="Angi | Home" />
+        <meta property="og:site_name" content="αngi#8888" />
         <meta property="og:title" content="αngi#8888" />
         <meta property="og:type" content="website" />
         <meta property="og:description" content="Angi Personal Site" />
         <meta property="og:image" content="https://cdn.discordapp.com/avatars/952987111135514704/a_9989a27b388baea7fc95975d4290f9af.gif?size=4096" />
-        <meta property="og:image:type" content="image/jpeg" />
-        <meta content="#800080" name="theme-color" />
-        <meta content="#800080" name="msapplication-navbutton-color" />
+        <meta content="#CC8899" name="theme-color" />
+        <meta content="#CC8899" name="msapplication-navbutton-color" />
         <meta property="og:url" content="https://soyangi.me" />
-        <meta property="twitter:card" content="summary_large_image" />
         <link rel="canonical" href="https://soyangi.me" />
         <link href="https://fonts.googleapis.com/css?family=Manrope:500,500italic%7CInconsolata:200,200italic%7CInter:400,400italic%7CIBM+Plex+Sans+Condensed:200,200italic" rel="stylesheet" type="text/css" />
         <style>
