--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
         <meta name="author" content="Angi | Home" />
         <meta name="description" content="Angi Personal Site" />
         <meta property="og:site_name" content="αngi#8888" />
-        <meta property="og:title" content="αngi#8888" />
+        <meta property="og:title" content="Angi | Home" />
         <meta property="og:type" content="website" />
-        <meta property="og:description" content="Angi Personal Site" />
+        <meta property="og:description" content="^^" />
         <meta property="og:image" content="https://cdn.discordapp.com/avatars/952987111135514704/a_9989a27b388baea7fc95975d4290f9af.gif?size=4096" />
         <meta content="#CC8899" name="theme-color" />
         <meta content="#CC8899" name="msapplication-navbutton-color" />
