--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width,initial-scale=1" />
         <meta name="author" content="Angi | Home" />
-        <meta name="description" content="Angi Personal Site" />
-        <meta property="og:site_name" content="αngi#8888" />
+        <meta name="description" content="https://soyangi.me" />
+        <meta property="og:site_name" content="αngi#1234" />
         <meta property="og:title" content="Angi | Home" />
         <meta property="og:type" content="website" />
-        <meta property="og:description" content="^^" />
-        <meta property="og:image" content="https://cdn.discordapp.com/avatars/952987111135514704/a_9989a27b388baea7fc95975d4290f9af.gif?size=4096" />
+        <meta property="og:description" content="^^ https://soyangi.me" />
+        <meta property="og:image" content="https://cdn.discordapp.com/avatars/981936028917059664/a_e35c6bd7ba4114d58d847092da4ec81b.gif?size=4096" />
         <meta content="#CC8899" name="theme-color" />
         <meta content="#CC8899" name="msapplication-navbutton-color" />
         <meta property="og:url" content="https://soyangi.me" />
@@ -1333,7 +1333,7 @@
                                         />
                                     </span>
                                 </div>
-                                <h1 id="text01">αngi#8888</h1>
+                                <h1 id="text01">αngi#1234</h1>
                                 <h1 id="text07" class="style3">Coder &amp; Verified Bot Developer</h1>
                                 <ul id="icons01" class="style1 icons">
                                     <li>
