--- a/index.html
+++ b/index.html
@@ -120,6 +120,7 @@
                 display: block;
             }
             body {
+                cursor: url(https://cdn.custom-cursor.com/db/7248/32/starter-3d-effect-cursor-cursor.png), default;
                 line-height: 1;
             }
             ol,
