--- a/discord/index.html
+++ b/discord/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <title>Angi | Discord</title>
-    <meta http-equiv="refresh" content="0; url='https://discord.gg/lcy'" />
+    <meta http-equiv="refresh" content="0; url='https://discord.com/users/1001513424083238934'" />
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -73,7 +73,7 @@
 </head>
 <body>
     <div class="content">
-        <span id="text" onclick="copy()">https://discord.gg/lcy</span>
+        <span id="text" onclick="copy()">https://discord.com/users/1001513424083238934</span>
         <span id="info">Press to copy link</span>
     </div>
     <script>
