--- a/index.html
+++ b/index.html
@@ -837,7 +837,7 @@ function showTime() {
       <a href="https://angi.lol/telegram" target="_blank">
         <img class="socialLink" src="telegram-logo.png" alt="Telegram" onclick="playClickSound()">
       </a>
-      <a href="https://angi.lol/" target="_blank">
+      <a href="https://angi.lol/designs" target="_blank">
         <img class="socialLink" src="website-logo.png" alt="Websites" onclick="playClickSound()">
       </a>
     </div>
