--- a/index.html
+++ b/index.html
@@ -730,7 +730,7 @@ function showTime() {
       <a href="https://angi.lol/telegram" target="_blank">
         <img class="socialLink" src="telegram-logo.png" alt="Telegram" onclick="playClickSound()">
       </a>
-      <a href="https://angi.lol/bonuses" target="_blank">
+      <a href="https://angi.lol/designs" target="_blank">
         <img class="socialLink" src="designs.png" alt="Websites" onclick="playClickSound()">
       </a>
     </div>
