--- a/designs.html
+++ b/designs.html
@@ -15,7 +15,23 @@
     background: #000;
     perspective: 340px;
       overflow-y: hidden; /* Enable vertical scrolling for the entire body */
+
   }
+  body::before {
+  content: "";
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: url('tu-imagen.jpg'); /* Ruta de tu imagen JPG */
+  background-size: cover; /* Hace que la imagen cubra toda la pantalla */
+  background-position: center; /* Centra la imagen */
+  background-repeat: no-repeat; /* Evita que se repita la imagen */
+  opacity: 0.35; /* Aplica la opacidad deseada */
+  z-index: -1; /* Asegura que el contenido se superponga a la imagen */
+}
+
 
   .stars {
     animation: starsIn 1s;
@@ -73,6 +89,7 @@
 .thumbnail {
   width: 30%; /* Adjust thumbnail width as needed */
   margin-bottom: 20px;
+  margin-top: 15px; 
   cursor: pointer;
   transition: transform 0.3s ease;
 }
