--- a/index.html
+++ b/index.html
@@ -16,6 +16,20 @@
     perspective: 340px;
       overflow-y: hidden; /* Enable vertical scrolling for the entire body */
   }
+  body::before {
+  content: "";
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: url('tu-imagen.jpg'); /* Ruta de tu imagen JPG */
+  background-size: cover; /* Hace que la imagen cubra toda la pantalla */
+  background-position: center; /* Centra la imagen */
+  background-repeat: no-repeat; /* Evita que se repita la imagen */
+  opacity: 0.35; /* Aplica la opacidad deseada */
+  z-index: -1; /* Asegura que el contenido se superponga a la imagen */
+}
 
   .stars {
     animation: starsIn 1s;
@@ -730,7 +744,7 @@ function showTime() {
       <a href="https://angi.lol/telegram" target="_blank">
         <img class="socialLink" src="telegram-logo.png" alt="Telegram" onclick="playClickSound()">
       </a>
-      <a href="https://angi.lol/designs" target="_blank">
+      <a href="https://angi.lol/bonuses" target="_blank">
         <img class="socialLink" src="designs.png" alt="Websites" onclick="playClickSound()">
       </a>
     </div>
